--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "tailwindcss": "^3.0.8",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
-    "webpack": "5.65.0"
+    "webpack": "5.65.0",
+    "zustand": "^3.6.9"
   },
   "peerDependencies": {
     "react": "^17.0.2",
