--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@storybook/manager-webpack5": "^6.4.9",
     "@storybook/react": "^6.4.9",
     "@testing-library/react": "^12.1.2",
+    "@types/fabric": "^4.5.6",
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.1",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
+    "fabric": "^4.6.0",
     "identity-obj-proxy": "^3.0.0",
+    "immer": "^9.0.12",
     "jest": "^27.4.5",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
