--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ZitySpace/ux-sdk",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha2",
   "description": "ZitySpace UX SDK",
   "scripts": {
     "rollup": "rollup -c",
@@ -28,13 +28,11 @@
     "@storybook/manager-webpack5": "^6.4.9",
     "@storybook/react": "^6.4.9",
     "@testing-library/react": "^12.1.2",
-    "@types/fabric": "^4.5.6",
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.1",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
-    "fabric": "^4.6.0",
     "identity-obj-proxy": "^3.0.0",
     "immer": "^9.0.12",
     "jest": "^27.4.5",
@@ -63,5 +61,8 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
-  "dependencies": {}
+  "dependencies": {
+    "@types/fabric": "^4.5.6",
+    "fabric": "^4.6.0"
+  }
 }
