--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ZitySpace/ux-sdk",
-  "version": "0.0.1-alpha2",
+  "version": "0.0.1-alpha4",
   "description": "ZitySpace UX SDK",
   "scripts": {
     "rollup": "rollup -c",
@@ -40,6 +40,7 @@
     "postcss-cli": "^9.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.12",
     "rollup": "^2.62.0",
     "rollup-plugin-dts": "^4.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
