--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "postcss-cli": "^9.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.34.12",
     "rollup": "^2.62.0",
     "rollup-plugin-dts": "^4.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -64,6 +63,7 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@types/fabric": "^4.5.6",
-    "fabric": "^4.6.0"
+    "fabric": "^4.6.0",
+    "react-query": "^3.34.12"
   }
 }
