--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss-cli": "^9.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-toastify": "^8.1.1",
     "rollup": "^2.62.0",
     "rollup-plugin-dts": "^4.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
