success: container queries :D

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ZitySpace/ux-sdk",
-  "version": "0.0.1-alpha2",
+  "version": "0.0.1-alpha8",
   "description": "ZitySpace UX SDK",
   "scripts": {
     "rollup": "rollup -c",
@@ -41,6 +41,7 @@
     "postcss-cli": "^9.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-resize-detector": "^7.0.0",
     "react-toastify": "^8.1.1",
     "rollup": "^2.62.0",
     "rollup-plugin-dts": "^4.1.0",
