--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "@types/fabric": "^4.5.6",
     "fabric": "^4.6.0",
+    "rc-slider": "^10.0.0",
     "react-query": "^3.34.12"
   }
 }
