--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@headlessui/react": "^1.4.3",
+    "@headlessui/react": "^0.0.0-insiders.fbfc86f",
     "@heroicons/react": "^1.0.5",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.2",
@@ -40,6 +40,7 @@
     "jest": "^27.4.5",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-resize-detector": "^7.0.0",
