add ACECodeEditor and its story

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/fabric": "^4.5.6",
     "fabric": "^4.6.0",
     "rc-slider": "^10.0.0",
+    "react-ace": "^10.0.0",
     "react-query": "^3.34.12"
   }
 }
