--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@types/fabric": "^4.5.6",
+    "echarts": "^5.3.2",
     "fabric": "^4.6.0",
     "rc-slider": "^10.0.0",
     "react-ace": "^10.0.0",
