--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "tailwindcss": "^3.0.8",
+    "ts-deepmerge": "^2.0.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "webpack": "5.65.0",
