seprate example options generation into each file; add heatmap but left implementing custom series for heatmap in cartesian2d coords

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
+    "storybook-prod": "NODE_ENV=production start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "author": "Rui Zheng",
