cleanup/optimize rollup warnings/config; adapt to node18

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,15 @@
         "jsx": "react",
         "module": "ESNext",
         "declaration": true,
-        "declarationDir": "types",
+        "declarationDir": ".",
         "sourceMap": true,
+        "inlineSources": true,
         "outDir": "dist",
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "emitDeclarationOnly": true,
     },
+    "include": ["src"],
     "exclude": [
         "node_modules",
         "dist",
