--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@ZitySpace/ux-sdk",
-  "version": "0.0.1-alpha8",
-  "description": "ZitySpace UX SDK",
+  "version": "0.0.1",
+  "description": "ZitySpace Formula UX SDK",
   "scripts": {
-    "rollup": "rollup -c",
+    "dev": "NODE_ENV=development rollup -c -w",
+    "build": "NODE_ENV=production rollup -c",
     "test": "jest",
     "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "storybook-prod": "NODE_ENV=production start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "author": "Rui Zheng",
-  "license": "MIT",
+  "author": "ZitySpace",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@ZitySpace/iframe-auth": "^0.0.1-alpha1",
     "@babel/core": "^7.16.7",
@@ -31,6 +32,7 @@
     "@storybook/manager-webpack5": "^6.4.9",
     "@storybook/react": "^6.4.9",
     "@testing-library/react": "^12.1.2",
+    "@types/fabric": "^4.5.6",
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.1",
@@ -47,7 +49,6 @@
     "react-resize-detector": "^7.0.0",
     "react-toastify": "^8.1.1",
     "rollup": "^2.62.0",
-    "rollup-plugin-dts": "^4.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
@@ -62,14 +63,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "files": [
     "dist"
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@types/fabric": "^4.5.6",
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
     "fabric": "^4.6.0",
