--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/fabric": "^4.5.6",
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.38",
+    "@ZitySpace/react-annotate": "link:../react-annotate",
     "autoprefixer": "^10.4.1",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
