--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
         "node_modules",
         "dist",
         "src/**/*.stories.tsx",
-        "src/**/*.test.tsx"
+        "src/**/*.test.tsx",
+        "src/**/examples"
     ]
 }
