ci: integrate eslint/lint-staged/prettier/semantic-release/commitlint/husky

--- a/package.json
+++ b/package.json
@@ -9,21 +9,30 @@
     "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "storybook-prod": "NODE_ENV=production start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "lint": "eslint '*.{js,json}' 'src/**/*.{ts,tsx}'",
+    "lint:fix": "eslint --fix '*.{js,json}' 'src/**/*.{ts,tsx}'",
+    "prettier": "prettier -w src .github .storybook",
+    "prettier:check": "prettier --check src .github .storybook"
   },
   "author": "ZitySpace",
   "license": "Apache-2.0",
   "devDependencies": {
     "@ZitySpace/iframe-auth": "^0.0.1-alpha1",
+    "@ZitySpace/react-annotate": "link:../react-annotate",
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@headlessui/react": "^0.0.0-insiders.fbfc86f",
     "@heroicons/react": "^1.0.5",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.2",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
@@ -35,15 +44,22 @@
     "@types/fabric": "^4.5.6",
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.38",
-    "@ZitySpace/react-annotate": "link:../react-annotate",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "autoprefixer": "^10.4.1",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
+    "eslint": "^8.20.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "immer": "^9.0.12",
     "jest": "^27.4.5",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
+    "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -53,6 +69,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "semantic-release": "^19.0.3",
     "tailwindcss": "^3.0.8",
     "ts-deepmerge": "^2.0.1",
     "tslib": "^2.3.1",
