fix: update Scikit/MultiSelect component to work properly

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@headlessui/react": "^0.0.0-insiders.fbfc86f",
+    "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^1.0.5",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.2",
