--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@storybook/builder-webpack5": "^6.4.9",
     "@storybook/manager-webpack5": "^6.4.9",
     "@storybook/react": "^6.4.9",
+    "@tailwindcss/container-queries": "^0.1.0",
     "@testing-library/react": "^12.1.2",
     "@types/fabric": "^4.5.6",
     "@types/jest": "^27.4.0",
@@ -76,7 +77,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "semantic-release": "^19.0.3",
-    "tailwindcss": "^3.0.8",
+    "tailwindcss": "^3.2.4",
     "ts-deepmerge": "^2.0.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
