--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,11 @@ name: Release
 
 on:
   push:
-    branches:
-      - master
+    # branches:
+    #   - master
+    paths-ignore:
+      - 'src/**/*.stories.tsx'
+      - 'src/**/*.test.tsx'
 
   workflow_dispatch:
 
