refactor: mv stories into examples folder

--- a/package.json
+++ b/package.json
@@ -5,17 +5,14 @@
   "author": "ZitySpace",
   "license": "Apache-2.0",
   "scripts": {
-    "dev": "NODE_ENV=development rollup -c -w",
-    "build": "NODE_ENV=production rollup -c",
+    "dev": "NODE_ENV=development rollup -c -w --bundleConfigAsCjs",
+    "build": "NODE_ENV=production rollup -c --bundleConfigAsCjs",
     "test": "jest",
     "test:watch": "jest --watch",
-    "storybook": "start-storybook -p 6006",
-    "storybook-prod": "NODE_ENV=production start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "lint": "eslint '*.{js,json}' 'src/**/*.{ts,tsx}'",
     "lint:fix": "eslint --fix '*.{js,json}' 'src/**/*.{ts,tsx}'",
-    "prettier": "prettier -w src .github .storybook",
-    "prettier:check": "prettier --check src .github .storybook"
+    "prettier": "prettier -w src .github",
+    "prettier:check": "prettier --check src .github"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -33,23 +30,17 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^1.0.5",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.2",
-    "@rollup/plugin-typescript": "^8.3.0",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.2.1",
+    "@rollup/plugin-typescript": "^10.0.1",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/addon-actions": "^6.4.9",
-    "@storybook/addon-essentials": "^6.4.9",
-    "@storybook/addon-links": "^6.4.9",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack5": "^6.4.9",
-    "@storybook/manager-webpack5": "^6.4.9",
-    "@storybook/react": "^6.4.9",
     "@tailwindcss/container-queries": "^0.1.0",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/react": "^13.4.0",
     "@types/fabric": "^4.5.6",
     "@types/jest": "^27.4.0",
-    "@types/react": "^17.0.38",
+    "@types/react": "^18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "@zityspace/react-annotate": "^0.11.1-beta.2",
@@ -68,31 +59,31 @@
     "postcss-cli": "^9.1.0",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-resize-detector": "^7.0.0",
     "react-toastify": "^8.1.1",
-    "rollup": "^2.62.0",
+    "rollup": "^3.9.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
     "semantic-release": "^19.0.3",
     "tailwindcss": "^3.2.4",
     "ts-deepmerge": "^2.0.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "webpack": "5.65.0",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "^4.1.1"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
     "fabric": "^4.6.0",
-    "rc-slider": "^10.0.0",
+    "rc-slider": "^10.1.0",
+    "rc-tooltip": "^5.2.2",
     "react-ace": "^10.0.0",
     "react-query": "^3.34.12"
   }
