--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,22 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "skipLibCheck": true,
+  "compilerOptions": {
+    "target": "es6",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
 
-        "jsx": "react",
-        "module": "ESNext",
-        "declaration": true,
-        "declarationDir": ".",
-        "sourceMap": true,
-        "inlineSources": true,
-        "outDir": "dist",
-        "moduleResolution": "node",
-        "allowSyntheticDefaultImports": true,
-        "emitDeclarationOnly": true,
-    },
-    "include": ["src"],
-    "exclude": [
-        "node_modules",
-        "dist",
-        "src/**/*.stories.tsx",
-        "src/**/*.test.tsx",
-        "src/**/examples"
-    ]
+    "jsx": "react",
+    "module": "ESNext",
+    "declaration": true,
+    "declarationDir": ".",
+    "sourceMap": true,
+    "inlineSources": true,
+    "outDir": "dist",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "emitDeclarationOnly": true
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", "examples", "src/**/*.stories.tsx"]
 }
