--- a/package.json
+++ b/package.json
@@ -94,8 +94,6 @@
     "postcss-cli": "^9.1.0",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-resize-detector": "^7.0.0",
     "react-toastify": "^8.1.1",
     "rollup": "^3.9.0",
@@ -106,8 +104,7 @@
     "ts-deepmerge": "^2.0.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
-    "webpack": "5.65.0",
-    "zustand": "^4.1.1"
+    "webpack": "5.65.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -120,6 +117,7 @@
     "rc-slider": "^10.1.0",
     "rc-tooltip": "^5.2.2",
     "react-ace": "^10.0.0",
-    "react-query": "^3.34.12"
+    "react-query": "^3.34.12",
+    "zustand": "^4.1.1"
   }
 }
