--- a/package.json
+++ b/package.json
@@ -111,13 +111,13 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.24.6",
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
     "fabric": "^4.6.0",
     "rc-slider": "^10.1.0",
     "rc-tooltip": "^5.2.2",
     "react-ace": "^10.0.0",
-    "react-query": "^3.39.3",
     "zustand": "^4.1.1"
   }
 }
