--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint '*.{js,json}' 'src/**/*.{ts,tsx}'",
     "lint:fix": "eslint --fix '*.{js,json}' 'src/**/*.{ts,tsx}'",
     "prettier": "prettier -w src .github",
-    "prettier:check": "prettier --check src .github"
+    "prettier:check": "prettier --check src .github",
+    "dry-run-release": "semantic-release --dry-run"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -75,9 +76,9 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^20.1.7",
     "@types/react": "^18.0.26",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "@zityspace/react-annotate": "^0.12.0-beta.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "@zityspace/react-annotate": "0.12.0-beta.1",
     "autoprefixer": "^10.4.1",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
@@ -113,11 +114,13 @@
     "@tanstack/react-query": "^4.24.6",
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
-    "fabric": "^6.0.0-beta1",
+    "fabric": "6.0.0-beta5",
     "rc-slider": "^10.1.0",
     "rc-tooltip": "^5.2.2",
     "rc-util": "^5.30.0",
+    "react": "^18.2.0",
     "react-ace": "^10.1.0",
+    "react-dom": "^18.2.0",
     "zustand": "^4.1.1"
   }
 }
