--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.24.6",
+    "ace-builds": "^1.21.1",
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
     "fabric": "6.0.0-beta5",
