chore: move storybook example to a separate repo

--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
     "fabric": "6.0.0-beta5",
+    "jotai": "^2.1.0",
     "rc-slider": "^10.1.0",
     "rc-tooltip": "^5.2.2",
     "rc-util": "^5.30.0",
