--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint:fix": "eslint --fix '*.{js,json}' 'src/**/*.{ts,tsx}'",
     "prettier": "prettier -w src .github",
     "prettier:check": "prettier --check src .github",
-    "dry-run-release": "semantic-release --dry-run"
+    "dry-run-release": "semantic-release --dry-run",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -71,6 +73,14 @@
     "@rollup/plugin-typescript": "^10.0.1",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
+    "@storybook/addon-essentials": "^7.0.12",
+    "@storybook/addon-interactions": "^7.0.12",
+    "@storybook/addon-links": "^7.0.12",
+    "@storybook/addon-styling": "^1.0.8",
+    "@storybook/blocks": "^7.0.12",
+    "@storybook/react": "^7.0.12",
+    "@storybook/react-webpack5": "^7.0.12",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@tailwindcss/container-queries": "^0.1.0",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^27.4.0",
@@ -78,13 +88,13 @@
     "@types/react": "^18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
-    "@zityspace/react-annotate": "0.12.0-beta.1",
     "autoprefixer": "^10.4.1",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
     "eslint": "^8.20.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "immer": "^9.0.12",
@@ -94,12 +104,13 @@
     "postcss-cli": "^9.1.0",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
-    "react-resize-detector": "^9.1.0",
-    "react-toastify": "^8.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.9.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "semantic-release": "^19.0.3",
+    "storybook": "^7.0.12",
     "tailwindcss": "^3.2.4",
     "ts-deepmerge": "^2.0.1",
     "tslib": "^2.3.1",
@@ -112,17 +123,18 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.24.6",
+    "@zityspace/react-annotate": "0.12.0-beta.1",
     "ace-builds": "^1.21.1",
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
-    "fabric": "6.0.0-beta5",
+    "fabric": "^6.0.0-beta1",
     "jotai": "^2.1.0",
     "rc-slider": "^10.1.0",
     "rc-tooltip": "^5.2.2",
     "rc-util": "^5.30.0",
-    "react": "^18.2.0",
     "react-ace": "^10.1.0",
-    "react-dom": "^18.2.0",
+    "react-resize-detector": "^9.1.0",
+    "react-toastify": "^8.1.1",
     "zustand": "^4.1.1"
   }
 }
