--- a/package.json
+++ b/package.json
@@ -122,13 +122,15 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.24.6",
+    "@tanstack/query-core": "^4.29.11",
+    "@tanstack/react-query": "^4.29.12",
     "@zityspace/react-annotate": "0.12.0-beta.1",
     "ace-builds": "^1.21.1",
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
     "fabric": "^6.0.0-beta1",
     "jotai": "^2.1.0",
+    "jotai-tanstack-query": "^0.7.1",
     "rc-slider": "^10.1.0",
     "rc-tooltip": "^5.2.2",
     "rc-util": "^5.30.0",
