--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "identity-obj-proxy": "^3.0.0",
     "immer": "^9.0.12",
     "jest": "^27.4.5",
+    "less": "^4.1.3",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.23",
     "postcss-cli": "^9.1.0",
@@ -123,11 +124,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.12",
-    "@zityspace/react-annotate": "0.12.0-beta.1",
+    "@zityspace/fabric": "6.0.0-beta1",
+    "@zityspace/react-annotate": "0.12.0-beta.3",
     "ace-builds": "^1.21.1",
     "echarts": "^5.3.2",
     "echarts-gl": "^2.0.9",
-    "fabric": "^6.0.0-beta1",
     "jotai": "^2.1.0",
     "rc-slider": "^10.1.0",
     "rc-tooltip": "^5.2.2",
